--- a/index.html
+++ b/index.html
@@ -69,6 +69,33 @@
     </div>
 </section>
 <!-- Complex Banner Section End -->
+
+<!-- middle Section Start -->
+<section>
+    <div class="heading-title-new">
+        <h2 class="heading-one">Online Games<span class="primary-font">Funny Videos</span></h2>
+        <p class="paragraph-title">A Collection of Hilarious Videos to Brighten Your Day</p>
+    </div>
+    <div class="four-img-section">
+        
+    <div class="first-img">
+        <img src="images/Rectangle 4.png" alt="">
+        <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+    </div>
+    <div class="secound-img">
+        <img src="images/Rectangle 5.png" alt="">
+        <p>Did you score? #unblockedgames #school</p>
+        <img src="images/Rectangle 6.png" alt="">
+        <p>Breaking game records like OG</p>
+        <img src="images/Rectangle 7.png" alt="">
+        <p>Busted gaming on school laptop, but you are still lit.</p>
+
+    </div>
+
+    </div>
+
+
+</section>
 <!-- Compound Banner Section Start -->
 <section class="compound-banner-container">
     <div class="compound-img-icone">
