--- a/index.html
+++ b/index.html
@@ -217,6 +217,17 @@ Play SEction END
 
         </div>
       </div>
+      <!-- icone edit start -->
+      <div class="social-links">
+        <a href="https://youtube.com"><i class="fa-brands fa-youtube"></i></a>
+        <a href="https://www.facebook.com/anas.sazzad.25?mibextid=9R9pXO"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://linkedin.com"><i class="fa-brands fa-linkedin-in"></i></a>
+        <a href="https://instagram.com"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://twitter.com"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://apple.com"><i class="fa-brands fa-apple"></i></a>
+      </div>
+      <!-- icone edit end -->
+
       <div class="game-type">
         <div>
             Terms and Conditions
