--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <div>
             <img src="images/Rectangle 7.png" alt="">
-            <span><i class="fa-solid fa-circle-play"></i></span>
+            <span id="video-button"><i class="fa-solid fa-circle-play"></i></span>
             <p>Busted gaming on school laptop, <br> but you are still lit.</p>
         </div>
     </div>
